--- a/src/csv_parser.ipynb
+++ b/src/csv_parser.ipynb
@@ -1,12 +1,36 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.4.3"
+    },
+    "colab": {
+      "name": "csv_parser.ipynb",
+      "provenance": [],
+      "collapsed_sections": []
+    }
+  },
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "T23aj7f1req6"
       },
-      "outputs": [],
       "source": [
         "from numpy.core.numeric import NaN\n",
         "#-*- coding: UTF-8 -*-\n",
@@ -371,47 +395,23 @@
         "    result=json.dumps(metadata_csvw, indent = 4)\n",
         "    meta_file_name = file_name.split(sep='.')[0] + '-metadata.json'\n",
         "    return meta_file_name, result"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "cellView": "form",
-        "id": "GtuhMq9VzdvR"
+        "id": "GtuhMq9VzdvR",
+        "cellView": "form"
       },
-      "outputs": [],
       "source": [
         "#@title Dialog - Run Cell to begin\n",
         "dialog = CSV_Annotator()\n",
         "dialog.display_widgets()"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     }
-  ],
-  "metadata": {
-    "colab": {
-      "collapsed_sections": [],
-      "name": "csv_parser.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.4.3"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
