deleted a neccesary import to urlretrieve, reimplemented it

--- a/csv_parser.ipynb
+++ b/csv_parser.ipynb
@@ -40,7 +40,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T23aj7f1req6"
+        "id": "T23aj7f1req6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d4a6789e-f079-4bf3-cfee-f095ccb497ce"
       },
       "source": [
         "#-*- coding: UTF-8 -*-\n",
@@ -58,6 +62,8 @@
         "\n",
         "url = \"https://raw.githubusercontent.com/Mat-O-Lab/CSVToCSVW/main/annotator.py\"\n",
         "file_name = 'csvtocsvw.py'\n",
+        "\n",
+        "from urllib.request import urlretrieve\n",
         "\n",
         "import os.path\n",
         "if not os.path.isfile(file_name):\n",
@@ -156,8 +162,16 @@
         "            )\n",
         "    )"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: Owlready2 in /usr/local/lib/python3.7/dist-packages (0.35)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
