commented all the print outs and updated jupyter notebook

--- a/csv_parser.ipynb
+++ b/csv_parser.ipynb
@@ -1,37 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "csv_parser.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.4.3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Mat-O-Lab/CSVToCSVW/blob/main/csv_parser.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -39,13 +12,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
-        "id": "T23aj7f1req6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "T23aj7f1req6",
         "outputId": "d4a6789e-f079-4bf3-cfee-f095ccb497ce"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: Owlready2 in /usr/local/lib/python3.7/dist-packages (0.35)\n"
+          ]
+        }
+      ],
       "source": [
         "#-*- coding: UTF-8 -*-\n",
         "#@title Code - Run Once To Start { vertical-output: true, display-mode: \"form\" }\n",
@@ -56,7 +39,7 @@
         "import json\n",
         "\n",
         "%matplotlib notebook\n",
-        "\n",
+        "!pip install rdflib\n",
         "!pip install Owlready2\n",
         "from owlready2 import *\n",
         "\n",
@@ -70,24 +53,15 @@
         "  urlretrieve(url,file_name) \n",
         "import csvtocsvw\n",
         "\n",
-        "#there is a bug in Owlready2 when having imports in turtle in a owl file\n",
-        "# if the error is thrown, load again and it is fine\n",
-        "try:\n",
-        "  mseo=get_ontology(\"https://purl.matolab.org/mseo/mid\").load()\n",
-        "except:\n",
-        "  mseo=get_ontology(\"https://purl.matolab.org/mseo/mid\").load()\n",
-        "  \n",
-        "cco_mu=get_ontology(\"http://www.ontologyrepository.com/CommonCoreOntologies/Mid/UnitsOfMeasureOntology/\").load()\n",
-        "qudt=get_ontology('http://www.qudt.org/qudt/owl/1.0.0/unit.owl').load()\n",
-        "\n",
         "class AnnotatorDialog():\n",
         "  def __init__(self, csv_url=''):\n",
         "      self.csv_url = csv_url\n",
         "  def _create_initial_widgets(self):\n",
         "      self.url_widget=widgets.Text(\n",
-        "          value='',\n",
+        "          value='https://github.com/Mat-O-Lab/CSVToCSVW/raw/main/examples/example.csv',\n",
         "          placeholder='put ur url to a *-metadata.json here',\n",
         "          description='Url:',\n",
+        "          \n",
         "          disabled=False\n",
         "          )\n",
         "      # self.uploader = widgets.FileUpload(accept='',  # Accepted file extension e.g. '.txt', '.pdf', 'image/*', 'image/*,.pdf'\n",
@@ -111,7 +85,13 @@
         "          description='separator:',\n",
         "          disabled=False,\n",
         "      )\n",
-        "      self.settings= widgets.HBox([self.encoding, self.separator])\n",
+        "      self.header_separator = widgets.Dropdown(\n",
+        "          options=['auto', ',',';', '\\t', '|', \"\\s+\",\"\\s+|\\t+|\\s+\\t+|\\t+\\s+\"],\n",
+        "          value='auto',\n",
+        "          description='separator:',\n",
+        "          disabled=False,\n",
+        "      )\n",
+        "      self.settings= widgets.HBox([self.encoding, self.separator,self.header_separator])\n",
         "      self.process_button = widgets.Button(description='Process!', layout=widgets.Layout(width='200px')); \n",
         "      self.process_button.on_click(self._on_process)\n",
         "  def _on_clear(self,button):\n",
@@ -129,7 +109,7 @@
         "        self.data_uri=self.url_widget.value\n",
         "      else:\n",
         "        print('no input uri given')\n",
-        "      self.annotator=csvtocsvw.CSV_Annotator(separator=self.separator.value,encoding=self.encoding.value)\n",
+        "      self.annotator=csvtocsvw.CSV_Annotator(separator=self.separator.value, header_separator=self.header_separator.value, encoding=self.encoding.value)\n",
         "      metafile_name, result=self.annotator.process(self.data_uri)\n",
         "      print(result)\n",
         "      res = result\n",
@@ -161,31 +141,48 @@
         "                ]\n",
         "            )\n",
         "    )"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: Owlready2 in /usr/local/lib/python3.7/dist-packages (0.35)\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "GtuhMq9VzdvR",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "GtuhMq9VzdvR"
       },
+      "outputs": [],
       "source": [
         "#@title Dialog - Run Cell to begin\n",
         "dialog = AnnotatorDialog()\n",
         "dialog.display_widgets()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "csv_parser.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
